force-app/main/default/objects/Sample__c/Sample__c.object-meta.xml
<CustomObject>
    <description>Laboratory sample submitted for testing. Captures patient/customer info, TRF data, sample storage, and protocol details.</description>
    <label>Sample</label>
    <nameField>
        <displayFormat>S{0000000}</displayFormat>
        <label>Sample Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>