force-app/main/default/objects/Sample__c/fields/Box_ID__c.field-meta.xml
<CustomField>
    <fullName>Box_ID__c</fullName>
    <label>Box ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>