force-app/main/default/objects/Sample__c/fields/Box_Position__c.field-meta.xml
<CustomField>
    <fullName>Box_Position__c</fullName>
    <label>Box Position</label>
    <description>Position within the storage box (e.g. A02).</description>
    <length>10</length>
    <type>Text</type>
</CustomField>