force-app/main/default/objects/Sample__c/fields/Concentration__c.field-meta.xml
<CustomField>
    <fullName>Concentration__c</fullName>
    <label>Concentration (ng/uL)</label>
    <description>Sample concentration in nanograms per microliter.</description>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>