force-app/main/default/objects/Sample__c/fields/Current_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Current_Protocol__c</fullName>
    <label>Current Protocol</label>
    <length>80</length>
    <type>Text</type>
</CustomField>