force-app/main/default/objects/Sample__c/fields/Customer_Sample_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sample_Name__c</fullName>
    <label>Customer Sample Name</label>
    <description>Display name used by the customer or referring lab for this sample.</description>
    <length>80</length>
    <type>Text</type>
</CustomField>