force-app/main/default/objects/Sample__c/fields/Freezer_Refrigerator__c.field-meta.xml
<CustomField>
    <fullName>Freezer_Refrigerator__c</fullName>
    <label>Freezer/Refrigerator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>