force-app/main/default/objects/Sample__c/fields/Next_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Next_Protocol__c</fullName>
    <label>Next Protocol</label>
    <length>80</length>
    <type>Text</type>
</CustomField>