force-app/main/default/objects/Sample__c/fields/Number_of_Aliquots__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Aliquots__c</fullName>
    <label>Number of Aliquots</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>