force-app/main/default/objects/Sample__c/fields/Ordering_Physician__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Physician__c</fullName>
    <label>Ordering Physician</label>
    <length>120</length>
    <type>Text</type>
</CustomField>