force-app/main/default/objects/Sample__c/fields/Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>Patient_DOB__c</fullName>
    <label>Patient Date of Birth</label>
    <type>Date</type>
</CustomField>