force-app/main/default/objects/Sample__c/fields/Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>Patient_Gender__c</fullName>
    <label>Patient Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Male</fullName><default>false</default><label>Male</label></value>
            <value><fullName>Female</fullName><default>false</default><label>Female</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>