force-app/main/default/objects/Sample__c/fields/Patient_MRN__c.field-meta.xml
<CustomField>
    <fullName>Patient_MRN__c</fullName>
    <label>Patient MRN</label>
    <description>Medical Record Number / Patient ID.</description>
    <length>40</length>
    <type>Text</type>
</CustomField>