force-app/main/default/objects/Sample__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>STAT</fullName><default>false</default><label>STAT</label></value>
            <value><fullName>ASAP</fullName><default>false</default><label>ASAP</label></value>
            <value><fullName>Routine</fullName><default>true</default><label>Routine</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>