force-app/main/default/objects/Sample__c/fields/Quality_Control_Check__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control_Check__c</fullName>
    <label>Quality Control Check</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>