force-app/main/default/objects/Sample__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <label>Rack</label>
    <length>20</length>
    <type>Text</type>
</CustomField>