force-app/main/default/objects/Sample__c/fields/Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Label__c</fullName>
    <label>Record Type</label>
    <description>Display label for sample category (e.g. Submitted Sample, Derived Sample, R&amp;D Sample).</description>
    <length>40</length>
    <type>Text</type>
</CustomField>