force-app/main/default/objects/Sample__c/fields/Sample_ID__c.field-meta.xml
<CustomField>
    <fullName>Sample_ID__c</fullName>
    <label>Sample ID</label>
    <description>Public-facing sample identifier (e.g. S000553).</description>
    <externalId>true</externalId>
    <length>40</length>
    <type>Text</type>
</CustomField>