force-app/main/default/objects/Sample__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Testing Completed</fullName><default>false</default><label>Testing Completed</label></value>
            <value><fullName>Complete</fullName><default>false</default><label>Complete</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>