force-app/main/default/objects/Sample__c/fields/Tests_Requested__c.field-meta.xml
<CustomField>
    <fullName>Tests_Requested__c</fullName>
    <label>Tests Requested</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>