force-app/main/default/objects/Sample__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sample_ID__c</columns>
    <columns>Customer_Sample_Name__c</columns>
    <columns>Sample_Type__c</columns>
    <columns>Date_of_Collection__c</columns>
    <columns>Box_ID__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>