force-app/main/default/objects/Sample__c/listViews/Submitted_Samples.listView-meta.xml
<ListView>
    <fullName>Submitted_Samples</fullName>
    <columns>Sample_ID__c</columns>
    <columns>Customer_Sample_Name__c</columns>
    <columns>Sample_Type__c</columns>
    <columns>Date_of_Collection__c</columns>
    <columns>Box_ID__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Submitted Samples</label>
</ListView>